# telegram_diary

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTORS  README.md  RETROSPECTIVE.md  pyproject.toml  spec.md  todo.md
.github/workflows/: ci.yml  claude-fix.yml  copilot-review.yml  deploy.yml
prompts/: daily_summary.txt
scripts/: pr_reviewer.py  setup_runner.sh  summarize.sh  telegram-diary-daily.service  telegram-diary-daily.timer  telegram-diary-summarize.service  telegram-diary-summarize.timer  telegram-diary.service
src/: dedup.py  fetcher.py  healthcheck.py  journal_writer.py  logger.py  main.py  models.py  normalizer.py  retry.py  state_store.py  summarizer.py  tagger.py
tests/: test_dedup.py  test_e2e.py  test_fetcher.py  test_healthcheck.py  test_journal_writer.py  test_logger.py  test_main.py  test_retry.py  test_state_store.py  test_summarizer.py  test_tagger.py
